k8_crd/k8_svc_cip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  labels:
    app: mlflow
spec:
  selector:
    app: mlflow
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
